# obsidian-excel-html-paste

./: .gitignore  README.ko.md  README.md  main.js  main.ts  manifest.json  package-lock.json  package.json  styles.css  versions.json
.github/workflows/: build-plugin.yml
helper/: Cargo.toml  README.md
helper/src/: main.rs
