[package]
name = "excel-html-clipboard"
version = "1.1.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory"
] }
